--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ body {
   position: relative;
   left: 0;
   width: 100vw;
-  min-height: 100vh;
+  min-height: 100svh;
   padding: 0rem;
   overflow-x: hidden;
 }
@@ -68,9 +68,15 @@ a {
   color: #333;
 }
 
+.navbar_container {
+  max-width: 100vw;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .main_app {
   position: relative;
-  top: 50px;
+  top: 0;
   width: 100vw;
   padding: 0;
   min-height: calc(100vh - var(--navbar-height-mob-desk));
@@ -398,6 +404,7 @@ input.trigger_menu {
 
 @media (min-width: 160px) {
   .main_app {
+    top: 14px;
     min-height: calc(100vh - var(--navbar-height-mob-desk));
   }
 
